Fix start button staying visible on Firefox

--- a/source/PalmReading/style.css
+++ b/source/PalmReading/style.css
@@ -143,6 +143,8 @@ body {
   width: 1px;
   top: 0;
   left: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
 }
 .tab input:focus {
   outline: none;
